# BO-DigitalTwin

./: .gitignore  README.md
MyBlenderASCII/: __init__.py
blender_scripts/: TexturerBpy.py  dtm_filter.py  meshlab_lod.py  texture_retreiver.py
bo-dt-webapi/: go.mod  go.sum  main.go
bo-dt-webapi/data/: data.go  trees.go
las_parser/: Cargo.toml
las_parser/src/: dataframe_wrapper.rs  main.rs  program.rs
roof-builder/: CMakeLists.txt  roof-builder.cpp
roof-builder/output/: 32_685000_4928000.stl  32_685000_4928000_roofs.stl  aaaaaaa.stl  temp.stl  temp_large.stl
roof-builder/src/: Building.cpp  Building.h  Dbscan.cpp  Dbscan.h  Exporter.h  Grid.cpp  Grid.h  MyPoint.h  Printer.h  Program.h  UtilsCV.h  Writer.h  matplotlibcpp.h  maurizio.h  roof-builder.cpp  roof-builder.h
roof-builder/src/ImageProcessing/: ImageProcessingUnit.h  UtilsCV.h
roof-builder/src/Readers/: Reader.h  ReaderCsv.cpp  ReaderCsv.h  ReaderLas.cpp  ReaderLas.h
roof-builder/src/Triangle/: TriangleWrap.cpp  TriangleWrap.h  triangle.c  triangle.h
roof-builder/src/nanoflann/: nanoflann.hpp
rust-roofs/: Cargo.toml
rust-roofs/src/: clustering.rs  df_utils.rs  drawer.rs  grid.rs  las_wrapper.rs  main.rs  my_point.rs
