[package]
name = "testTetti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.2"
geo = "0.27.0"
image = "0.24.7"
imageproc = "0.23.0"
las = "0.8.1"
plotters = "0.3.5"
polars = "0.35.4"
rand = "0.8.5"
